@@ -365,6 +365,7 @@ PKL_DEF_INSN(PKL_INSN_POKES,"","pokes")
 PKL_DEF_INSN(PKL_INSN_PUSHF,"n","pushf")
 PKL_DEF_INSN(PKL_INSN_POPF,"n","popf")
 PKL_DEF_INSN(PKL_INSN_PUSHVAR,"nn","pushvar")
+PKL_DEF_INSN(PKL_INSN_PUSHTOPVAR,"n","pushtopvar")
 PKL_DEF_INSN(PKL_INSN_POPVAR,"nn","popvar")
 PKL_DEF_INSN(PKL_INSN_REGVAR,"","regvar")
 PKL_DEF_INSN(PKL_INSN_DUC,"","duc")
