@@ -1,5 +1,14 @@
 2020-11-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.h: Prototype for pvm_env_toplevel.
+	* libpoke/pvm-env.c (pvm_env_toplevel): New function.
+	* libpoke/pvm.jitter (pushtopvar): New instruction.
+	* libpoke/pkl-insn.def: Define PKL_INSN_PUSHTOPVAR.
+	* libpoke/pkl-asm.c (pkl_asm_call): Use the `pushtopvar'
+	instruction.
+
+2020-11-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* common/pk-utils.c (pk_print_binary): Do not print prefixes.
 	* libpoke/pvm-val.c (pvm_print_val_1): Print prefix 0b before
 	calling pk_print_binary.
